# SocialMediaAnalysis

./: .env.example  .gitignore  README.md  ab_testing_api.ipynb  flask_app.ipynb  insights.ipynb  pyproject.toml  requirements-ml.txt  requirements.txt  run_demo.ipynb  run_demo.py  simple_demo.ipynb  simple_demo.py  simple_flask_app.ipynb  twitter_client.ipynb
.github/workflows/: tests.yml
backend/: config.ipynb  config.py
backend/api/: ab_testing_api.ipynb  ab_testing_api.py  flask_app.ipynb  flask_app.py  twitter_client.ipynb  twitter_client.py
backend/models/: semi_supervised_training.ipynb  sentiment_models.ipynb  sentiment_models.py  train_insights_pipeline.ipynb
backend/models/saved/: insights_text_pipeline.pkl  logistic_regression_model.pkl  lstm_model.h5  naive_bayes_model.pkl  neural_network_model.h5  random_forest_model.pkl  svm_model.pkl  tokenizer.pkl
backend/utils/: ab_testing.ipynb  ab_testing.py  feature_extractor.ipynb  feature_extractor.py  text_preprocessor.ipynb  text_preprocessor.py
data/processed/: sample_labeled_tweets.csv  sample_unlabeled_tweets.csv
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: ABTestingDashboard.js  RealTimeDashboard.js  SentimentChart.js  TweetList.js
frontend/src/pages/: SearchPage.js
scripts/: train_corpus.ipynb  train_corpus.py
src/social_media_analysis/: __init__.py  cli.py  data.py  model.py  preprocess.py
src/social_media_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model_pipeline.py  test_preprocess.py
(+1 files in other folders)
