[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "social-media-analysis"
version = "0.1.0"
description = "Lightweight sentiment analysis helpers for social media experiments"
readme = "README.md"
authors = [{ name = "Charlie Ijk" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.25",
  "scikit-learn>=1.3",
  "joblib>=1.3"
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1"]

[project.urls]
Homepage = "https://github.com/charlieijk/SocialMediaAnalysis"
Issues = "https://github.com/charlieijk/SocialMediaAnalysis/issues"

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
